Start working on auth API doc and add more descriptions.
